--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ libadwaita = "0.7"
 zbus = "4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
 anyhow = "1.0"
 emojis = "0.8.0"
 unicode-blocks = "0.1.9"
