refactor: rename App ID to io.github.szymonwilczek.carmenta
Refactored Application ID to meet Flathub requirements (reverse-DNS with io.github prefix).

- Renamed App ID in Rust code ('main.rs', 'window.rs' implicit) and Extension ('extension.js').
- Renamed assets:
    - 'data/io.github.szymonwilczek.carmenta.desktop'
    - 'data/io.github.szymonwilczek.carmenta.svg'
- Created Metainfo file: 'data/io.github.szymonwilczek.carmenta.metainfo.xml'.
- Updated build scripts and manifests:
    - 'install.sh'
    - 'scripts/merge_manifest.py'
    - 'io.github.szymonwilczek.carmenta.yml' (replaced old manifest).
- Updated '.gitignore' to exclude new JSON manifest.

Signed-off-by: Szymon Wilczek <swilczek.lx@gmail.com>

--- a/data/io.github.szymonwilczek.carmenta.desktop
+++ b/data/io.github.szymonwilczek.carmenta.desktop
@@ -2,7 +2,7 @@
 Name=Carmenta
 Comment=Blazing fast Emoji Picker
 Exec=carmenta
-Icon=org.carmenta.App
+Icon=io.github.szymonwilczek.carmenta
 Type=Application
 Categories=Utility;GTK;
 Terminal=false
