--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ extension/schemas/gschemas.compiled
 cargo-sources.json
 org.carmenta.App.json
 carmenta-extension.zip
+io.github.szymonwilczek.carmenta.json
