fix(flatpak): prepare for submission (runtime 49, build fixes)
Final changes before Flathub submission:
- Updated 'io.github.szymonwilczek.carmenta.yml' and 'merge_manifest.py' to use GNOME Runtime 49 and 'rust-stable' SDK extension.
- Fixed 'scripts/test_flathub.sh' arguments for correct wrapper execution.
- Updated '.gitignore' to track necessary changes.

Signed-off-by: Szymon Wilczek <swilczek.lx@gmail.com>

--- a/io.github.szymonwilczek.carmenta.yml
+++ b/io.github.szymonwilczek.carmenta.yml
@@ -1,7 +1,9 @@
 app-id: io.github.szymonwilczek.carmenta
 runtime: org.gnome.Platform
-runtime-version: '47'
+runtime-version: '49'
 sdk: org.gnome.Sdk
+sdk-extensions:
+  - org.freedesktop.Sdk.Extension.rust-stable
 command: carmenta
 finish-args:
   - --share=ipc
@@ -10,6 +12,7 @@ finish-args:
   - --device=dri
   - --talk-name=org.gnome.Shell
 build-options:
+  append-path: /usr/lib/sdk/rust-stable/bin
   env:
     CARGO_HOME: /run/build/carmenta/cargo
 modules:
