feat: Implement GIF search and display functionality
- Replace Tenor API with Klipy API
- Add obfuscated API key handling
- Implement GIF grid with animated previews using MediaFile
- Add GIF tab to main window
- Implement robust error handling and segfault prevention

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"
 anyhow = "1.0"
 emojis = "0.8.0"
 unicode-blocks = "0.1.9"
+reqwest = { version = "0.13.1", features = ["json"] }
+urlencoding = "2.1.3"
